--- a/demo/App.scss
+++ b/demo/App.scss
@@ -61,19 +61,19 @@ body, app {
   width: 100vw;
 }
 
-.app-content {
+.demo-app-content {
   flex: auto;
   overflow: auto;
   position: relative;
 }
 
-.main-content {
+.demo-main-content {
   overflow: auto;
   height: 100%;
   display: flex;
 }
 
-.main-content section {
+.demo-main-content section {
   padding: 16px;
   width: 100%;
   box-sizing: border-box;
