Finished data tables.

--- a/demo/component-demos/Typography.scss
+++ b/demo/component-demos/Typography.scss
@@ -42,7 +42,7 @@ caption {
 }
 
 code, pre {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Roboto Mono', monospace;
 }
 
 small {
