--- a/demo/component-demos/ImageList.scss
+++ b/demo/component-demos/ImageList.scss
@@ -1,4 +1,4 @@
-@import "svelte-material-ui/image-list/mixins";
+@import "@material/image-list/mixins";
 
 .my-image-list-standard {
   @include mdc-image-list-standard-columns(5);
