Change to a Svelte color theme.

--- a/App.scss
+++ b/App.scss
@@ -23,7 +23,7 @@ body, app {
   display: flex;
 }
 
-.demo-drawer-content, .demo-main-content {
+.demo-drawer, .demo-main-content {
   overflow: auto;
   height: 100%;
 }
