--- a/component-demos/Theme.scss
+++ b/component-demos/Theme.scss
@@ -1,16 +1,20 @@
-.themed {
+.demo-special-theme {
   min-height: 100%;
   min-width: 100%;
   background-color: #000;
   color: #fff;
-
   @import "@material/theme/color-palette";
 
-  $mdc-theme-primary: $material-color-purple-50;
-  $mdc-theme-secondary: $material-color-cyan-50;
+  $mdc-theme-primary: $material-color-green-100;
+  $mdc-theme-secondary: $material-color-cyan-100;
   $mdc-theme-background: #000;
   $mdc-theme-surface: #000;
-  $mdc-theme-error: $material-color-orange-50;
+  $mdc-theme-error: $material-color-orange-100;
+
+  @import "@material/theme/variables";
+  @each $style in map-keys($mdc-theme-property-values) {
+    --mdc-theme-#{$style}: #{map-get($mdc-theme-property-values, $style)};
+  }
 
   @import "svelte-material-ui/button/style";
   @import "svelte-material-ui/fab/style";
