Better error color.

--- a/theme/_smui-theme.scss
+++ b/theme/_smui-theme.scss
@@ -12,7 +12,7 @@ $mdc-theme-secondary: #676778;
 $mdc-theme-background: #fff;
 $mdc-theme-surface: #fff;
 
-$mdc-theme-error: $material-color-brown-900;
+$mdc-theme-error: $material-color-red-900;
 
 // This adds classes like "mdc-theme--primary-bg".
 @import "@material/theme/mdc-theme";
