--- a/component-demos/Theme.scss
+++ b/component-demos/Theme.scss
@@ -16,6 +16,6 @@
     --mdc-theme-#{$style}: #{map-get($mdc-theme-property-values, $style)};
   }
 
-  @import "svelte-material-ui/button/style";
-  @import "svelte-material-ui/fab/style";
+  @import "@svelte-material-ui/button/style";
+  @import "@svelte-material-ui/fab/style";
 }
