docs: update docs for new site location

--- a/site/App.scss
+++ b/site/App.scss
@@ -3,7 +3,7 @@
 //
 
 // Import the typography styles.
-@import "component-demos/Typography.scss";
+@import "demos/Typography.scss";
 
 html {
   height: 100vh;
