--- a/site/App.scss
+++ b/site/App.scss
@@ -5,6 +5,22 @@
 // Import the typography styles.
 @import "demos/Typography.scss";
 
+// We need the theming variables for the following styles.
+@import "smui-theme";
+// This adds classes like "mdc-theme--primary-bg".
+@import "@material/theme/mdc-theme";
+// Main Top App Bar styling.
+@import "@smui/top-app-bar/style";
+.mdc-top-app-bar.demo-top-app-bar {
+  // Color the top bar with "surface" colors.
+  @include mdc-top-app-bar-fill-color-accessible(surface);
+  @include mdc-top-app-bar-icon-ink-color(on-surface);
+  // Position it above the drawer.
+  z-index: 7;
+}
+
+// Now on to the regular app styling stuff.
+
 html {
   height: 100vh;
   width: 100vw;
