--- a/packages/card/_style.scss
+++ b/packages/card/_style.scss
@@ -1,6 +1,7 @@
 @import "@material/card/mdc-card";
 @import "@smui/button/style";
 @import "@smui/icon-button/style";
+@import "@smui/ripple/style";
 
 .smui-card--padded, .smui-card__content, .smui-card__primary-action--padded {
   padding: 16px;
