chore: fix demo of top app bar

--- a/site/src/routes/_app.scss
+++ b/site/src/routes/_app.scss
@@ -3,7 +3,7 @@
 //
 
 // Import the typography styles.
-@import "routes/demo/typography.scss";
+@import "demo/typography.scss";
 
 // We need the theming variables for the following styles.
 @import "smui-theme";
