--- a/packages/button/_mixins.scss
+++ b/packages/button/_mixins.scss
@@ -4,6 +4,13 @@
 @mixin smui-button-core-styles($query: mdc-feature-all()) {
   @include smui-button-without-ripple($query);
   @include smui-button-ripple($query);
+  @include smui-button-rounded($query);
+}
+
+@mixin smui-button-rounded($query: mdc-feature-all()) {
+  .smui-button-rounded {
+    @include mdc-button-shape-radius(999px);
+  }
 }
 
 @mixin smui-button-without-ripple($query: mdc-feature-all()) {
@@ -25,6 +32,7 @@
 @mixin smui-button-ripple($query: mdc-feature-all()) {
   .smui-button--color-secondary {
     @include mdc-states(secondary, false, $query);
+    // @include mdc-button-shape-radius(999px);
 
     &.mdc-button--raised,
     &.mdc-button--unelevated {
