--- a/site/src/routes/demo/button.scss
+++ b/site/src/routes/demo/button.scss
@@ -9,15 +9,6 @@
   --notchSize: #{$mdc-shape-small-component-radius * 2};
 
   // source: https://css-tricks.com/notched-boxes/
-  clip-path:
-    polygon(
-      0% var(--notchSize),
-      var(--notchSize) 0%,
-      calc(100% - var(--notchSize)) 0%,
-      100% var(--notchSize),
-      100% calc(100% - var(--notchSize)),
-      calc(100% - var(--notchSize)) 100%,
-      var(--notchSize) 100%,
-      0% calc(100% - var(--notchSize))
-    );
+  -webkit-clip-path: polygon(0% var(--notchSize), var(--notchSize) 0%, calc(100% - var(--notchSize)) 0%, 100% var(--notchSize), 100% calc(100% - var(--notchSize)), calc(100% - var(--notchSize)) 100%, var(--notchSize) 100%, 0% calc(100% - var(--notchSize)));
+  clip-path: polygon(0% var(--notchSize), var(--notchSize) 0%, calc(100% - var(--notchSize)) 0%, 100% var(--notchSize), 100% calc(100% - var(--notchSize)), calc(100% - var(--notchSize)) 100%, var(--notchSize) 100%, 0% calc(100% - var(--notchSize)));
 }
