--- a/site/src/theme/_smui-theme.scss
+++ b/site/src/theme/_smui-theme.scss
@@ -2,7 +2,7 @@
 // MDC Theme
 //
 
-@import "@material/theme/color-palette";
+@import '@material/theme/color-palette';
 
 // Svelte Colors!
 $mdc-theme-primary: #ff3e00;
