--- a/site/src/theme/_smui-theme.scss
+++ b/site/src/theme/_smui-theme.scss
@@ -2,13 +2,13 @@
 // MDC Theme
 //
 
-@use '@material/theme/color-palette';
+// @use '@material/theme/color-palette';
+// Svelte Colors!
 @use "@material/theme" with (
-  // Svelte Colors!
   $primary: #ff3e00,
-  $accent: #40b3ff,
+  // $accent: #40b3ff,
   $secondary: #676778,
   $surface: #fff,
   $background: #fff,
-  $error: color-palette.$red-900,
+  // $error: color-palette.$red-900,
 );
