fix: ripple activation and colors

--- a/packages/select/_mixins.scss
+++ b/packages/select/_mixins.scss
@@ -1,8 +1,8 @@
-@import "@material/select/mixins";
-@import "@material/ripple/mixins";
-@import "@material/theme/mixins";
-@import "@material/rtl/mixins";
-@import "@material/feature-targeting/functions";
+@import '@material/select/mixins';
+@import '@material/ripple/mixins';
+@import '@material/theme/mixins';
+@import '@material/rtl/mixins';
+@import '@material/feature-targeting/functions';
 
 @mixin smui-select-core-styles($query: mdc-feature-all()) {
   .mdc-select--activated {
