fix: button styling, menu events

--- a/site/src/routes/demo/button.scss
+++ b/site/src/routes/demo/button.scss
@@ -1,12 +1,12 @@
-@import '@material/button/mixins';
-@import '@material/shape/variables';
+@use '@material/button' as mdc-button;
+@use '@material/shape/variables' as mdc-shape;
 
 .button-shaped-round {
-  @include mdc-button-shape-radius(999px);
+  @include mdc-button.shape-radius(999px);
 }
 
 .button-shaped-notch {
-  --notchSize: #{$mdc-shape-small-component-radius * 2};
+  --notchSize: #{mdc-shape.$small-component-radius * 2};
 
   // source: https://css-tricks.com/notched-boxes/
   -webkit-clip-path: polygon(
