--- a/packages/button/_mixins.scss
+++ b/packages/button/_mixins.scss
@@ -1,39 +1,63 @@
-@import "@material/elevation/mixins";
-@import "@material/feature-targeting/functions";
+@use '@material/feature-targeting/feature-targeting';
+@use "@material/ripple";
+@use '@material/button' as mdc-button;
+@use '@material/theme/theme-color';
+@use '@material/elevation/mixins' as mdc-elevation;
 
-@mixin smui-button-core-styles($query: mdc-feature-all()) {
-  @include smui-button-without-ripple($query);
-  @include smui-button-ripple($query);
+$ripple-target: '.mdc-button__ripple';
+
+@mixin core-styles($query: feature-targeting.all()) {
+  @include without-ripple($query);
+  @include ripple($query);
 }
 
-@mixin smui-button-without-ripple($query: mdc-feature-all()) {
+@mixin without-ripple($query: feature-targeting.all()) {
   .smui-button--color-secondary {
-    @include mdc-button-ink-color(secondary, $query: $query);
+    @include mdc-button.ink-color(
+      theme-color.prop-value(secondary),
+      $query: $query
+    );
+    @include mdc-button.icon-color(
+      theme-color.prop-value(secondary),
+      $query: $query
+    );
 
     &.mdc-button--raised,
     &.mdc-button--unelevated {
-      @include mdc-button-container-fill-color(secondary, $query: $query);
-      @include mdc-button-ink-color(on-secondary, $query: $query);
+      @include mdc-button.filled-accessible(
+        theme-color.prop-value(secondary),
+        $query: $query
+      );
+      @include mdc-button.ink-color(
+        theme-color.prop-value(on-secondary),
+        $query: $query
+      );
+      @include mdc-button.icon-color(
+        theme-color.prop-value(on-secondary),
+        $query: $query
+      );
     }
 
     &.mdc-button--outlined {
-      @include mdc-button-outline-color(secondary, $query: $query);
+      @include mdc-button.outline-color(
+        theme-color.prop-value(secondary),
+        $query: $query
+      );
     }
   }
 }
 
-@mixin smui-button-ripple($query: mdc-feature-all()) {
+@mixin ripple($query: feature-targeting.all()) {
   .smui-button--color-secondary {
-    @include mdc-states($color: secondary, $query: $query);
-
-    &.mdc-button--raised,
-    &.mdc-button--unelevated {
-      @include mdc-states($color: on-secondary, $query: $query);
-    }
+    @include ripple.states(
+      $color: theme-color.prop-value(secondary),
+      $query: $query,
+      $ripple-target: $ripple-target
+    );
   }
 }
 
-@mixin smui-button__group-core-styles($query: mdc-feature-all()) {
+@mixin group-core-styles($query: feature-targeting.all()) {
   .smui-button__group {
     display: inline-flex;
 
@@ -46,7 +70,10 @@
     & > .mdc-button:not(:last-child),
     & > .mdc-button:not(:last-child) > .mdc-button__ripple,
     & > .smui-button__group-item:not(:last-child) > .mdc-button,
-    & > .smui-button__group-item:not(:last-child) > .mdc-button > .mdc-button__ripple {
+    &
+      > .smui-button__group-item:not(:last-child)
+      > .mdc-button
+      > .mdc-button__ripple {
       border-top-right-radius: 0;
       border-bottom-right-radius: 0;
     }
@@ -54,18 +81,21 @@
     & > .mdc-button:not(:first-child),
     & > .mdc-button:not(:first-child) > .mdc-button__ripple,
     & > .smui-button__group-item:not(:first-child) > .mdc-button,
-    & > .smui-button__group-item:not(:first-child) > .mdc-button > .mdc-button__ripple {
+    &
+      > .smui-button__group-item:not(:first-child)
+      > .mdc-button
+      > .mdc-button__ripple {
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
     }
 
     &.smui-button__group--raised {
-      @include mdc-elevation(2, $query: $query);
+      @include mdc-elevation.elevation(2, $query: $query);
     }
 
     & > .mdc-button--raised,
     & > .smui-button__group-item > .mdc-button--raised {
-      @include smui-button__group-mdc-button--raised_($query: $query);
+      @include group-mdc-button--raised_($query: $query);
     }
 
     & > .mdc-button--outlined:not(:last-child),
@@ -75,20 +105,20 @@
   }
 }
 
-@mixin smui-button__group-mdc-button--raised_($query) {
-  @include mdc-button-shape-radius(small, $query: $query);
-  @include mdc-elevation(0, $query: $query);
+@mixin group-mdc-button--raised_($query) {
+  @include mdc-button.shape-radius(small, $query: $query);
+  @include mdc-elevation.elevation(0, $query: $query);
 
   &:hover,
   &:focus {
-    @include mdc-elevation(0, $query: $query);
+    @include mdc-elevation.elevation(0, $query: $query);
   }
 
   &:active {
-    @include mdc-elevation(0, $query: $query);
+    @include mdc-elevation.elevation(0, $query: $query);
   }
 
   &:disabled {
-    @include mdc-elevation(0, $query: $query);
+    @include mdc-elevation.elevation(0, $query: $query);
   }
 }
