--- a/packages/button/_style.scss
+++ b/packages/button/_style.scss
@@ -1,5 +1,5 @@
-@import "@material/button/mdc-button";
-@import "@smui/ripple/style";
-@import "./mixins";
-@include smui-button-core-styles;
-@include smui-button__group-core-styles;
+@use "./mixins";
+@import '@material/button/mdc-button';
+@import '@smui/ripple/style';
+@include mixins.core-styles;
+@include mixins.group-core-styles;
