feat: updated Paper for MDC v10

--- a/packages/paper/_index.scss
+++ b/packages/paper/_index.scss
@@ -1,2 +1,4 @@
-@import "smui-theme";
-@import "./style";
+@use 'smui-theme';
+@use './style';
+
+@forward './mixins' show core-styles, paper-color;
