fix: update all the sass imports

--- a/packages/drawer/_style.scss
+++ b/packages/drawer/_style.scss
@@ -1,4 +1,8 @@
-@import '@material/drawer/mdc-drawer';
+@use '@material/drawer';
+
+@include drawer.core-styles;
+@include drawer.dismissible-core-styles;
+@include drawer.modal-core-styles;
 
 .mdc-drawer-scrim.smui-drawer-scrim__absolute {
   position: absolute;
