--- a/packages/menu-surface/_style.scss
+++ b/packages/menu-surface/_style.scss
@@ -1,4 +1,4 @@
-@import "@material/menu-surface/mdc-menu-surface";
+@use '@material/menu-surface/mdc-menu-surface';
 
 .smui-menu-surface--static {
   position: static;
