--- a/packages/menu/_style.scss
+++ b/packages/menu/_style.scss
@@ -1,2 +1,2 @@
-@import "@material/menu/mdc-menu";
-@import "@smui/menu-surface/style";
+@use '@material/menu/mdc-menu';
+@use '@smui/menu-surface/style';
