--- a/packages/ripple/_mixins.scss
+++ b/packages/ripple/_mixins.scss
@@ -1,5 +1,5 @@
-@use "@material/ripple";
-@use '@material/feature-targeting/feature-targeting';
+@use '@material/ripple';
+@use '@material/feature-targeting';
 
 @mixin core-styles($query: feature-targeting.all()) {
   .smui-ripple-surface {
