feat: updated Theme demo for MDC v10

--- a/site/src/theme/_smui-theme.scss
+++ b/site/src/theme/_smui-theme.scss
@@ -4,7 +4,7 @@
 
 // @use '@material/theme/color-palette';
 // Svelte Colors!
-@use "@material/theme" with (
+@use '@material/theme' with (
   $primary: #ff3e00,
   // $accent: #40b3ff,
   $secondary: #676778,
