feat: updated Linear Progress for MDC v10

--- a/packages/linear-progress/_style.scss
+++ b/packages/linear-progress/_style.scss
@@ -1,1 +1,3 @@
-@import "@material/linear-progress/mdc-linear-progress";
+@use '@material/linear-progress';
+
+@include linear-progress.core-styles;
