--- a/site/src/routes/demo/paper.scss
+++ b/site/src/routes/demo/paper.scss
@@ -1,5 +1,5 @@
-@use "@smui/paper";
-@use "@material/theme";
+@use '@smui/paper';
+@use '@material/theme';
 
 @include paper.paper-color(
   custom-green,
