--- a/site/src/routes/_app.scss
+++ b/site/src/routes/_app.scss
@@ -90,11 +90,18 @@ section > div {
   margin: 1em 0 0.6em;
 }
 
+.demo-title,
+.demo-subtitle {
+  margin-bottom: 0.5em;
+}
+
 .status {
   max-width: 100%;
   font-size: 0.9em;
   word-break: break-word;
   white-space: normal;
+  margin-bottom: 3em;
+  // border-bottom: 1px solid var(--mdc-theme-secondary, #000);
 }
 
 @include paper.paper-color(svelte-blue, #40b3ff, #fff);
