--- a/packages/drawer/_style.scss
+++ b/packages/drawer/_style.scss
@@ -4,10 +4,7 @@
 @include drawer.dismissible-core-styles;
 @include drawer.modal-core-styles;
 
-.mdc-drawer.smui-drawer__static {
-  position: static;
-}
-
+.mdc-drawer.smui-drawer__absolute,
 .mdc-drawer-scrim.smui-drawer-scrim__absolute {
   position: absolute;
 }
