docs: direct users to old theme file

--- a/site/src/theme/_smui-theme.scss
+++ b/site/src/theme/_smui-theme.scss
@@ -2,6 +2,10 @@
 // MDC Theme
 //
 
+// If you've come here looking for how to make a theme
+// file in SMUI v2, check here instead:
+// https://github.com/hperrin/svelte-material-ui/blob/v2/site/src/theme/_smui-theme.scss
+
 // @use '@material/theme/color-palette';
 // Svelte Colors!
 @use '@material/theme' with (
