feat: add primary color option to Switch

--- a/packages/switch/_style.scss
+++ b/packages/switch/_style.scss
@@ -1,4 +1,6 @@
 @use '@material/switch';
 @use '@smui/ripple/style';
+@use './mixins';
 
 @include switch.core-styles;
+@include mixins.core-styles;
