feat: updated Dialog for MDC v10

--- a/packages/dialog/_style.scss
+++ b/packages/dialog/_style.scss
@@ -1,1 +1,7 @@
-@import "@material/dialog/mdc-dialog";
+@use '@material/dialog';
+
+@include dialog.core-styles;
+
+.mdc-dialog.smui-dialog--selection .mdc-dialog__content {
+  padding: 0;
+}
