fix: selection dialog and stacked buttons styling

--- a/packages/dialog/_style.scss
+++ b/packages/dialog/_style.scss
@@ -5,3 +5,15 @@
 .mdc-dialog.smui-dialog--selection .mdc-dialog__content {
   padding: 0;
 }
+
+.mdc-dialog--stacked .mdc-dialog__actions.smui-dialog__actions--reversed {
+  flex-direction: column-reverse;
+
+  .mdc-dialog__button:not(:last-child) {
+    margin-top: 12px;
+  }
+
+  .mdc-dialog__button:last-child {
+    margin-top: 0;
+  }
+}
