--- a/packages/tab/_style.scss
+++ b/packages/tab/_style.scss
@@ -1,2 +1,2 @@
-@import "@material/tab/mdc-tab";
-@import "@smui/tab-indicator/style";
+@use '@material/tab/mdc-tab';
+@use '@smui/tab-indicator/style';
